# AnimatedDrawings

./: .gitignore  LANDMARK_FLOW_TRAINING.md  PLAN_CV.md  README.md  TODO.md  pyproject.toml  requirements-landmark-flow-data.txt  requirements-landmark-flow.txt  setup.py
animated_drawings/: config.py  utils.py
animated_drawings/model/: animated_drawing.py  arap.py
animated_drawings/video_pose/: __init__.py  bvh.py  constants.py  estimators.py  landmark_flow_corrector.py  live.py  pipeline.py  postprocessors.py  types.py  video.py
animated_drawings/view/: mesa_view.py  window_view.py
animateddrawings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: annotations_to_animation.py  fix_annotations.py  image_pose_pipeline_figures.py  image_to_animation.py  image_to_annotations.py  video_app.py  video_to_motion.py  webcam_to_animation.py
examples/doraemon_out/: bounding_box.yaml  char_cfg.yaml  mvc_cfg.yaml
examples/garlic_cycle_out/: mvc_cfg.yaml
examples/garlic_mediapipe_out/: mvc_cfg.yaml
examples/longmonkey_out/: bounding_box.yaml  char_cfg.yaml  mvc_cfg.yaml
examples/ttts_out/: bounding_box.yaml  char_cfg.yaml  mvc_cfg.yaml
examples/video_app/: __init__.py  diagnostics.py  server.py
final-proj-text/: .gitignore  ProjectFinal_ProgressReportTemplate.tex  ProjectFinal_ProposalTemplate.tex
final-proj-text/ProjectFinal_ProjectReportTemplate/: cvpr.sty  (+2 more)
landmark_flow/: __init__.py  bvh_dataset.py  constants.py  evaluate.py  model.py  train.py
poster_pose_figures/: pose_pipeline_figures.json
tests/: test_animated_drawing.py  test_bvh.py  test_image_pose_pipeline_figures.py  test_live_pose.py  test_render.py  test_video_app.py  test_video_pose.py
torchserve/: config.local.properties  key_file.json  setup_macos.sh
(+28 files in other folders)
