[project]
name = "animateddrawings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.3.2",
    "PyOpenGL>=3.1.6",
    "PyYAML>=6.0.1",
    "Pillow>=10.1.0",
    "Werkzeug<3",
    "glfw>=2.5.5",
    "mediapipe>=0.10.14,<0.10.22",
    "numpy>=1.24.0",
    "opencv-python>=4.6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.1.2",
    "scikit-image>=0.24.0",
    "scipy>=1.10.0",
    "shapely>=1.8.5",
    "torchserve>=0.12.0",
    "tqdm>=4.66.3",
]
