[project]
name = "animated_drawings"
version = "0.1.0"
description = "Animate character drawings from annotated rigs, BVH motion, or local video pose estimation."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "FAIR", email = "jesse.smith@meta.com" },
]
license = { file = "LICENSE" }
dependencies = [
    "Flask>=2.3.2",
    "PyOpenGL>=3.1.6",
    "PyYAML>=6.0.1",
    "Pillow>=10.1.0",
    "Werkzeug<3",
    "glfw>=2.5.5",
    "mediapipe>=0.10.14,<0.10.22",
    "numpy>=1.24.0",
    "opencv-python>=4.6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.1.2",
    "scikit-image>=0.24.0",
    "scipy>=1.10.0",
    "shapely>=1.8.5",
    "torchserve>=0.12.0",
    "tqdm>=4.66.3",
]

[project.optional-dependencies]
catboost = [
    "catboost>=1.2.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["animated_drawings*"]
namespaces = true

[tool.setuptools.package-data]
animated_drawings = [
    "mvc_base_cfg.yaml",
    "view/shaders/*.frag",
    "view/shaders/*.vert",
]
